--- a/tail.html
+++ b/tail.html
@@ -1,5 +1,10 @@
 
-</div>
 
+      </ol>
+    </div> <!-- .cd-h-timeline__events -->
+  </section>
+  <script src="https://timeline-nsai.s3.amazonaws.com/assets/js/util.js"></script> <!-- util functions included in the CodyHouse framework -->
+  <script src="https://timeline-nsai.s3.amazonaws.com/assets/js/swipe-content.js"></script> <!-- A Vanilla JavaScript plugin to detect touch interactions -->
+  <script src="https://timeline-nsai.s3.amazonaws.com/assets/js/main.js"></script>
 </body>
 </html>
